--- a/src/main/resources/META-INF/native-image/io.github.arlol/newlinechecker/native-image.properties
+++ b/src/main/resources/META-INF/native-image/io.github.arlol/newlinechecker/native-image.properties
@@ -1,13 +1,6 @@
 Args = \
 -H:+ReportExceptionStackTraces \
 --no-fallback \
---initialize-at-build-time=\
-org.eclipse.jgit.lib.ObjectId,\
-org.eclipse.jgit.diff.RenameDetector,\
-org.eclipse.jgit.diff.DiffEntry,\
-org.eclipse.jgit.ignore.internal.Strings,\
-org.eclipse.jgit.attributes.AttributesHandler,\
-org.eclipse.jgit.diff.RenameDetector,\
-org.eclipse.jgit.diff.DiffEntry,\
-org.eclipse.jgit.ignore.internal.Strings,\
-org.eclipse.jgit.attributes.AttributesHandler
+--enable-url-protocols=https \
+-H:+UnlockExperimentalVMOptions \
+-H:+IncludeAllLocales
