--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
 		<dependency>
 			<groupId>com.github.spotbugs</groupId>
 			<artifactId>spotbugs-annotations</artifactId>
+			<version>4.9.8</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
