--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -283,6 +283,7 @@ jobs:
     - name: Make sure build did not change anything
       run: git diff --exit-code
   required-status-check:
+    name: "${{ github.workflow }}-required-status-check"
     needs:
     - macos
     - linux
